--- a/styles/layout.css
+++ b/styles/layout.css
@@ -9,11 +9,23 @@
 main {
   overflow: auto;
   padding:4rem;
+  background-color: var(--surface-primary);
   
   .main-container{ 
    max-width: 33rem;
    margin-left:auto;
-   
+  }
+
+  & .back{
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    margin-bottom: 1.5rem ;
+  }
+
+  & h1{
+    font:600 1.5rem/1.25 var(--font-family);
+    margin-bottom: .5rem;
   }
 }
 
@@ -24,6 +36,23 @@ aside {
   .aside-container{ 
     max-width: 31rem;
    }
+
+   
+
+    & h2 {
+      font: 600 2.5rem/1.25 var(--font-family);
+      margin-block: .5rem;
+    
+
+
+     & span {
+        color: var(--text-highlight);
+      }
+    }
+
+    & p {
+      margin-bottom: 2rem ;
+    }
 
 }
 
