--- a/styles/form.css
+++ b/styles/form.css
@@ -19,3 +19,12 @@ legend {
 fieldset + fieldset {
   margin-top: 3rem;
 }
+
+
+.actions-wrapper {
+  display: flex;
+  gap: 1rem;
+  margin-top: 3rem;
+  justify-content: end;
+
+}
